add_subdirectory(algorithm)

add_executable(array array.cpp)
add_executable(vector vector.cpp)
add_executable(list list.cpp)
add_executable(deque deque.cpp)
add_executable(queue queue.cpp)
add_executable(stack stack.cpp)
add_executable(heap heap.cpp)
add_executable(priority_queue priority_queue.cpp)
add_executable(tree_map tree_map.cpp)
add_executable(hash_map hash_map.cpp)

set(target_lib gtest pthread CTL_shared)

target_link_libraries(array ${target_lib})
target_link_libraries(vector ${target_lib})
target_link_libraries(list ${target_lib})
target_link_libraries(deque ${target_lib})
target_link_libraries(queue ${target_lib})
target_link_libraries(stack ${target_lib})
target_link_libraries(heap ${target_lib})
target_link_libraries(priority_queue ${target_lib})
target_link_libraries(tree_map ${target_lib})
target_link_libraries(hash_map ${target_lib})

add_test(NAME array COMMAND array)
add_test(NAME deque COMMAND deque)
add_test(NAME hash_map COMMAND hash_map)
add_test(NAME heap COMMAND heap)
add_test(NAME list COMMAND list)
add_test(NAME priority_queue COMMAND priority_queue)
add_test(NAME queue COMMAND queue)
add_test(NAME stack COMMAND stack)
add_test(NAME tree_map COMMAND tree_map)
add_test(NAME sort COMMAND sort)